# OOP-LAB3

./: CMakeLists.txt  README.md  main.cpp
include/: figure.h  figure_array.h  hexagon.h  octagon.h  pentagon.h
src/: figure_array.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp
tests/: tests.cpp
